# Robot-Drawing-using-Visual-Servoing

./: README.md
chris_tracker/: CMakeLists.txt  CMakeLists.txt~  README.MD  package.xml
chris_tracker/include/: GeometryRetrive.h  pgm.h
chris_tracker/src/: DisplayImage.cpp  EDbyLMedS.cpp  GeometryRetrive.cpp  GeometryRetrive.cpp~  captureVideo.cpp  findContours.cpp  hello.cpp  lapack_wrapper.c  main.cpp  pubvel.cpp
wam_ibvs_visp/: CMakeLists.txt  LICENSE  README.md  package.xml
wam_ibvs_visp/include/: colormod.h  ibvs.h  math_helper.h  pose.h  string_convertor.h  transformation2D.h
wam_ibvs_visp/lib/: CMakeLists.txt  CMakeLists.txt~  ibvs.cpp  math_helper.cpp  pose.cpp  string_convertor.cpp  transformation2D.cpp
wam_ibvs_visp/msg/: pathData.msg
wam_ibvs_visp/src/: main.cpp
wam_ros/: README.MD
wam_ros/wam_msgs/: CMakeLists.txt  package.xml
wam_ros/wam_msgs/msg/: MatrixMN.msg  MatrixMN.msg~  RTCartPos.msg  RTCartVel.msg  RTJointVel.msg  RTOrtnPos.msg  RTOrtnVel.msg  RTPose.msg
wam_ros/wam_srvs/: CMakeLists.txt  package.xml
wam_ros/wam_srvs/srv/: BHandFingerPos.srv  BHandFingerVel.srv  BHandGraspPos.srv  BHandSpreadVel.srv  CartPosMove.srv  CartVel.srv  FollowPath.srv  ForceTorqueTool.srv  GravityComp.srv  Hold.srv  Link.srv  OrtnSplitMove.srv  OrtnSplitMove.srv~
