<?xml version="1.0"?>
<package>
  <name>chris_tracker</name>
  <version>0.0.0</version>
  <description>The arvp_chris package</description>
  <maintainer email="junjin@todo.todo">junjin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

<build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>  

<build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>  

  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>
  
<!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
