<?xml version="1.0"?>
<package>
  <name>wam_ibvs_visp</name>
  <version>0.0.0</version>
  <description>a ibvs controller for WAM robot, using Visp </description>
  <maintainer email="jjin5@ualberta.ca">junjin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

<build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

<build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>

  <build_depend>opencv</build_depend>
  <run_depend>opencv</run_depend>

  <build_depend>VISP</build_depend>
 <run_depend>VISP</run_depend>
 
  <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>

<!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
